--- a/configs/codegen/config.json
+++ b/configs/codegen/config.json
@@ -49,6 +49,10 @@
                         {
                             "name": "exampleDataBasePath",
                             "value": "../../../configs/models/example_data"
+                        },
+                        {
+                            "name": "jsonSerialization",
+                            "value": "True"
                         }
                     ]
                 }
@@ -105,6 +109,10 @@
                         {
                             "name": "exampleDataBasePath",
                             "value": "../../../configs/models/example_data"
+                        },
+                        {
+                            "name": "jsonSerialization",
+                            "value": "True"
                         }
                     ]
                 }
@@ -161,6 +169,10 @@
                         {
                             "name": "exampleDataBasePath",
                             "value": "../../../configs/models/example_data"
+                        },
+                        {
+                            "name": "jsonSerialization",
+                            "value": "True"
                         }
                     ]
                 }
@@ -217,6 +229,10 @@
                         {
                             "name": "exampleDataBasePath",
                             "value": "../../../configs/models/example_data"
+                        },
+                        {
+                            "name": "jsonSerialization",
+                            "value": "True"
                         }
                     ]
                 }
